--- a/public/CSS/ajax_blog.css
+++ b/public/CSS/ajax_blog.css
@@ -57,7 +57,7 @@ p {
 .carousel {
   height: 500px;
   margin-bottom: 60px;
-  margin-top: 0px;
+  margin-top: 0;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
